--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
 <section>
-    <h1>Bienvenue sur le site d'apprentissage du Javascript et dédié aux ExoPlanètes.</h1>
+    <h1>Bienvenue le site d'apprentissage du Javascript et dédié aux ExoPlanètes.</h1>
 
     <h3>Qu'est-ce qu'une exoplanète?</h3>
     <p>
